# learn_rag

./: .env.example  .env.sample  .gitignore  README.md  config.yaml  phase1_cached_rag.py  phase1_combined_rag.py  phase1_embeddings.py  phase1_faiss_search.py  phase1_improved_rag.py  phase1_rag.py  pyproject.toml
docs/: poetry_guide.md  pyenv_guide.md  setup_guide.md  tools_comparison.md  uv_guide.md
scripts/: rag_cli.py
src/rag/: __init__.py  cache.py  embeddings.py  rag.py
